--- a/life/src/index.html
+++ b/life/src/index.html
@@ -5,6 +5,13 @@
 </head>
 
 <body>
+    <div>
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <button id="slowDown">Zwolnij</button>
+        <button id="speedUp">Przyspiesz</button>
+        <button id="showCells">Pokaż</button>
+    </div>
     <canvas id="life" width="1200" height="800"></canvas>
 </body>
 
