malowanie szescianow; kontrola myszy

--- a/voxels-3d/src/index.html
+++ b/voxels-3d/src/index.html
@@ -6,9 +6,10 @@
 
 <body>
     <div>
-        <input type="number" id="radius" placeholder="Promień" value="10"/>
-        <input type="number" id="level" placeholder="Poziom" value="1" min="1"/>
+        <input type="number" id="radius" placeholder="Promień" value="10" />
+        <input type="number" id="level" placeholder="Poziom" value="-10" />
         <button type="button" id="test">Test</button>
+        <button type="button" id="clear">Czyść</button>
     </div>
     <div id="scene"></div>
 </body>
